--- a/README.adoc
+++ b/README.adoc
@@ -1,11 +1,13 @@
-# OpenSight Insights Operator - gather runtime workload informations
+# OpenSight Insights Runtime Extractor -gather runtime workload informations
 :toc:
 
-## Build the container image
+The container image is published at `ghcr.io/jmesnil/insights-runtime-extractor:latest`
+
+## Build the container image for development
 
 [source,bash]
 ----
-make build-image
+./scripts/build.sh
 ----
 
 It builds a multi-arch (ARM64 & AMD64) image named `quay.io/jmesnil/insights-runtime-extractor:latest`.
@@ -14,7 +16,7 @@ It builds a multi-arch (ARM64 & AMD64) image named `quay.io/jmesnil/insights-run
 
 [source,bash]
 ----
-make build-dev-image
+./scripts/build-dev.sh
 ----
 
 This creates a `rust-dev` Container image that contains all the Rust plumbing to compile and execute the code
@@ -23,7 +25,7 @@ This creates a `rust-dev` Container image that contains all the Rust plumbing to
 
 [source,bash]
 ----
-make rust-dev
+./scripts/rust-dev.sh
 
 # you are then inside a container ready to compile the Rust code
 make
