Update GitHub action and Makefile
to streamling the development and testing of the software

Signed-off-by: Jeff Mesnil <jmesnil@redhat.com>

--- a/README.adoc
+++ b/README.adoc
@@ -1,32 +1,66 @@
-# OpenSight Insights Runtime Extractor -gather runtime workload informations
+# OpenSight Insights Runtime Extractor
 :toc:
 
-The container image is published at `ghcr.io/jmesnil/insights-runtime-extractor:latest`
+## Gather runtime workload informations
 
-## Build the container image for development
+The container images built from this project provides an `insights-runtime-extractor`
+feature integrated to the https://github.com/openshift/insights-operator/tree/master[OpenShift Insights Operator].
 
-[source,bash]
-----
-./scripts/build.sh
-----
+The request for enhancement for this feature was created at https://github.com/openshift/enhancements/pull/1584.
 
-It builds a multi-arch (ARM64 & AMD64) image named `quay.io/jmesnil/insights-runtime-extractor:latest`.
+The container images are built by a GitHub action and published to:
 
-## Build the development image
+* `ghcr.io/jmesnil/insights-runtime-extractor:latest`
+* `ghcr.io/jmesnil/insights-runtime-exporter:latest`
 
-[source,bash]
-----
-./scripts/build-dev.sh
-----
-
-This creates a `rust-dev` Container image that contains all the Rust plumbing to compile and execute the code
-
-## Run the development image and compile the Rust code base
+## Build the container images
 
 [source,bash]
 ----
-./scripts/rust-dev.sh
+make build-image
+----
+
+It builds 2 multi-arch (ARM64 & AMD64) images:
+
+* `quay.io/jmesnil/insights-runtime-extractor:latest`
+* `quay.io/jmesnil/insights-runtime-exporter:latest`
+
+To build the images in another container registry, you can use the `IMAGE_REGISTRY` env var:
+
+[source,bash]
+----
+IMAGE_REGISTRY=quay.io/my-user-name make build-image
+----
+
+## Build the development image for Rust
+
+[source,bash]
+----
+make build-rust-dev-image
+----
+
+This creates a `rust-dev` Container image that contains all the Rust plumbing to compile and execute the code in `extractor`
+
+### Run the development image and compile the Rust code base
+
+[source,bash]
+----
+make rust-dev
 
 # you are then inside a container ready to compile the Rust code
 make
+----
+
+## Test the container images
+
+Prequesites:
+
+* To test the container images, you must have access to an OpenShift cluster and
+be logged in with a cluster admin account.
+
+To run the end-to-end (e2e) tests, run the command:
+
+[source,bash]
+----
+IMAGE_REGISTRY=quay.io/jmesnil make e2e-test
 ----
