Add instructions for a quick & dirty trial of the extractor
Signed-off-by: Jeff Mesnil <jmesnil@redhat.com>

--- a/README.adoc
+++ b/README.adoc
@@ -64,3 +64,74 @@ To run the end-to-end (e2e) tests, run the command:
 ----
 IMAGE_REGISTRY=quay.io/jmesnil make e2e-test
 ----
+
+## Run the extractor
+
+Prequisites:
+
+* `curl`, `jq`, `oc` are installed on your machine
+* you must have access to an OpenShift cluster and be logged in with a *cluster admin* account
+
+To deploy the insights-runtime-extractor in the `default` namespace, run the commands:
+
+[source,bash]
+----
+oc project default
+oc apply -f https://raw.githubusercontent.com/jmesnil/insights-runtime-extractor/main/manifests/insights-runtime-extractor-scc.yaml
+oc apply -f https://raw.githubusercontent.com/jmesnil/insights-runtime-extractor/main/manifests/insights-runtime-extractor.yaml
+----
+
+Verify that it is properly deployed:
+
+[source,bash]
+----
+oc get daemonset -n default insights-runtime-extractor
+----
+
+It should display that all the daemonset pods are ready:
+
+[source,bash]
+----
+NAME                         DESIRED   CURRENT   READY   UP-TO-DATE   AVAILABLE   NODE SELECTOR            AGE
+insights-runtime-extractor   2         2         2       2            2           kubernetes.io/os=linux   20m
+----
+
+Once the `insights-runtime-extractor` is ready, you can extract all the runtime info by running the script:
+
+[source,bash]
+----
+curl -s -L https://raw.githubusercontent.com/jmesnil/insights-runtime-extractor/main/scripts/extract.sh | bash -s
+---- 
+
+This command will output all the extracted runtime info organized by `namespace`, `pod` names and `container` ID:
+
+[source,json]
+----
+{
+  "default": {
+    "insights-runtime-extractor-6xcrv": {
+      "cri-o://d5cb3866a42600dd57db3128c6801b20c53717eb2db20d28681c12d2d9b9b568": {
+        "os": "rhel",
+        "osVersion": "9.4",
+        "kind": "Golang",
+        "kindVersion": "go1.22.6"
+      },
+      "cri-o://d915fdaa4e1b37fcf01f044d51ba8876c0a8f2a0c14e5bec2aada64e8847aa2e": {
+        "os": "rhel",
+        "osVersion": "9.4"
+      }
+    }
+  },
+  "kube-system": {
+    "konnectivity-agent-hqzgk": {
+      "cri-o://cd51b42c27004ac9e0809b85b6182d1265e59d1d37c749ed8b6da34f9de519cc": {
+        "os": "rhel",
+        "osVersion": "9.2",
+        "kind": "Golang",
+        "kindVersion": "go1.21.11 (Red Hat 1.21.11-1.el9_4) X:strictfipsruntime"
+      }
+    },
+  },
+  [...]
+}
+----
