--- a/README.adoc
+++ b/README.adoc
@@ -105,7 +105,7 @@ curl -s -L https://raw.githubusercontent.com/jmesnil/insights-runtime-extractor/
 
 This command will output all the extracted runtime info organized by `namespace`, `pod` names and `container` ID:
 
-[source,json]
+[source]
 ----
 Extracting runtime info from insights-runtime-extractor-wt5nr...
 Extracting runtime info from insights-runtime-extractor-z74cp...
